# crap_utility

./: README.md  example.py  pyproject.toml
src/crap_utility/: crap_job.py  crap_logger.py  crap_pandas.py
src/crap_utility.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: crap_test.py
