[build-system]
requires = ["setuptools>=61.0", "pandas>=1.5.0", "numpy>=1.23.3"]
build-backend = "setuptools.build_meta"

[project]
name = "crap_utility"
version = "0.0.4"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ["setuptools>=61.0", "pandas>=1.5.0", "numpy>=1.23.3"]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"